--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.0",
     "@astrojs/svelte": "^7.0.6",
+    "@edgeone/astro": "^1.0.4",
     "astro": "^5.5.2",
     "reading-time": "^1.5.0",
     "rehype-external-links": "^3.0.0",
